<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linerlayout_water_selector"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_trigger_location"
            style="@style/Tv15black"
            android:text="@string/trigger_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_alarm_user"
            style="@style/Tv15black"
            android:layout_marginTop="5dp"
            android:text="@string/user"
            app:layout_constraintLeft_toLeftOf="@id/tv_trigger_location"
            app:layout_constraintTop_toBottomOf="@id/tv_trigger_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_alarm_time"
            style="@style/Tv15black"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            app:layout_constraintLeft_toLeftOf="@id/tv_trigger_location"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_user" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_elieve"
            style="@style/roundTextView"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:drawablePadding="5dp"
            android:text="@string/relieve"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_trigger_location"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_time"
            app:rv_backgroundColor="@color/red_ff0000"
            app:rv_cornerRadius="10dp" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_mute"
            style="@style/roundTextView"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:drawablePadding="5dp"
            android:text="@string/mute"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_elieve"
            app:layout_constraintLeft_toRightOf="@id/tv_elieve"
            app:layout_constraintTop_toTopOf="@id/tv_elieve"
            app:rv_backgroundColor="@color/colorPrimaryDark"
            app:rv_backgroundPressColor="@color/colorPrimaryDark2"
            app:rv_cornerRadius="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>